<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
           <EditText
               android:id="@+id/edit_dry_temperature"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_dry_temperature"
               android:inputType="text|numberDecimal" />
    
    	    <EditText
    	        android:id="@+id/edit_wet_temperature"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:hint="@string/hint_wet_temperature"
    	        android:inputType="text|numberDecimal" />
    
    		<EditText
    		    android:id="@+id/edit_stage_time"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:hint="@string/hint_stage_time"
    		    android:inputType="text|numberDecimal" />
    		
    		<EditText
    		    android:id="@+id/edit_duration_time"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    android:hint="@string/hint_duration_time"
    		    android:inputType="text|numberDecimal" />
    		

</LinearLayout>
