<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#9FA8DA" >



    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/login_title"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/label_user_id"
        android:labelFor="@+id/edit_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="58dp"
        android:text="@string/user_id" />

    <TextView
        android:id="@+id/label_password"
        android:labelFor="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_alignLeft="@+id/edit_user_id"
        android:layout_below="@+id/edit_user_id"
        android:layout_marginTop="16dp"
        android:text="@string/password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/login"
        android:background="#FF5722"
        android:textAppearance="?android:attr/textAppearanceLarge"
		 />

     <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/edit_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_user_id"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" >
        
         <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/login_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignBottom="@+id/label_user_id"
        android:layout_alignRight="@+id/btn_login"
        android:layout_marginBottom="24dp"
        android:textColor="#666666"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/id_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignParentBottom="true"
        
        android:textAppearance="?android:attr/textAppearanceSmall" />
		 
</RelativeLayout>